Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9848

Cache manager functions do not raise exceptions on failure

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.2
    • NTCore
    • None

    Description

      Most cache manager functions should raise on failure. In ReactOS, many returns FALSE instead (which usually means "cannot wait"). In particular, the following functions should raise exceptions on failure but currently do not do so in ROS: CcInitializeCacheMap, CcMapData, CcPinMappedData, CcPinRead, CcPreparePinWrite.

      This also implies that all file system drivers calling these functions must only do so inside SEH, which must be ensured before fixing each function.

      Attachments

        Activity

          People

            Heis Spiter Pierre Schweitzer
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: