[NTOS:CC] - Raise an exception in case of failure in CcInitializeCacheMap CORE-9848

svn path=/trunk/; revision=68227